Fortify scan configuration and fix.